--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 					<a href="#"><i class="fab fa-facebook-f"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
 					<a href="#"><i class="fab fa-youtube"></i></a>
-					<a href="https://github.com/aishwaryaaa3">
+					<a href="https://github.com/maruthachalaprabu">
                         <i class="fa-brands fa-github"></i></a>
-					<a href="https://www.linkedin.com/in/aishwaryaa18/"><i class="fab fa-linkedin-in"></i></a>
+					<a href="https://www.linkedin.com/in/maruthachalaprabu-r"><i class="fab fa-linkedin-in"></i></a>
 				</div>
 			</div>			
 		</div>
@@ -67,3 +67,4 @@
 
 </body>
 </html>
+
